Added fonts Rendering Info on server WIP:Home-About

--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,5 @@
 @tailwind utilities;
 
 
-
-
-
-
+@import url('../public/Font/Web/Cecilia/stylesheet.css');
+@import '../public/Font/Web/Nohemi/stylesheet.css';
