Added Skills Added Contact WIP: Responsive Note:Slider

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,5 @@
 @tailwind components;
 @tailwind utilities;
 
-
-@import url('../public/Font/Web/Cecilia/stylesheet.css');
-@import '../public/Font/Web/Nohemi/stylesheet.css';
+@import url("../public/Font/Web/Cecilia/stylesheet.css");
+@import "../public/Font/Web/Nohemi/stylesheet.css";
