--- a/app/globals.css
+++ b/app/globals.css
@@ -5,15 +5,15 @@
 @import url("../public/Font/Web/Cecilia/stylesheet.css");
 @import "../public/Font/Web/Nohemi/stylesheet.css";
 
-  
+  html{
+    scroll-behavior: smooth;
+  }
 
 .cards-wrapper {
-  
     display: grid;
     grid-auto-flow: column;
     gap: 1rem;
     overflow: auto;
     padding-bottom: 1rem;
-    
     
   }
